# deutils

./: .gitignore  pyproject.toml
src/deutils/: __init__.py  _example.py
test/unit/: test_example.py
