[build-system]
requires = ["setuptools", "wheel"]
[project]
name = "deutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2.3"]

[project.optional-dependencies]
test = ["pytest>=8.3.3"]
dev = ["deutils[test]"]
