[build-system]
requires = ["setuptools", "wheel"]
[project]
name = "deutils"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas", "duckdb"]

[project.optional-dependencies]
test = ["pytest>=8.3.3"]
dev = ["deutils[test]"]
